<resources>
    <string name="app_name">5 Buttons</string>
    <string name="hokyo">hokyo</string>
    <string name="tvfdm">tvfdm</string>
    <string name="callUs">call us</string>
    <string name="contactUs">contact us</string>
    <string name="downloadHokyo">download hokyo</string>

    <string name="title_activity_web_view">WebView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>