<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hokyoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hokyo"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:onClick="buttonOnClick"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvfdmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tvfdm"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:onClick="buttonOnClick" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/callUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/callUs"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:onClick="buttonOnClick" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contactUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contactUs"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:onClick="buttonOnClick"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/downloadHokyo"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:onClick="buttonOnClick" />

</LinearLayout>